--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ h4 {
   font-weight: 600;
   text-transform: uppercase;
 }
+
+
+
 h1 {
   font-family: "Raleway", sans-serif;
   font-weight: 600;
@@ -72,7 +75,6 @@ h4 a {
   text-align: center;
   cursor: pointer;
   line-height: normal;
-  letter-spacing: 1px;
   border-radius: 25px;
   text-decoration: none;
 }
@@ -114,7 +116,7 @@ header {
 .contact li {
   align-items: center;
   display: flex;
-  padding: 13px 30px;
+  padding: 0 30px;
   border: 1px solid #e2e6e7;
   border-bottom: none;
   border-top: none;
@@ -230,7 +232,7 @@ header {
 .services {
   height: 800px;
 }
-.paragraf_1 p {
+.paragraf_1 .p_1 {
   padding-right: 250px;
   padding-left: 250px;
   margin-bottom: 50px;
@@ -281,7 +283,7 @@ header {
   width: 100%;
   padding-top: 60px;
 }
-.projects p {
+.projects .p_1 {
   padding-right: 250px;
   padding-left: 250px;
   margin-bottom: 50px;
@@ -304,17 +306,31 @@ header {
 }
 .projects ul li {
   width: 25%;
-  height: 244px;
+  position: relative;
 
 }
 .projects ul li img {
   width: 360px;
-  height: 244px;
+  height: 100%;
 }
-.projects ul li img:hover{
-  <p>Solar systems</p>
-  <a href="#Viuw Project" >View project</a>
+.projects ul li img:hover  + div{
+  display: block;
 }
+
+.projects ul li div {
+  display: flex;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #0000006e;
+  position: absolute;
+  display: none;
+}
+.projects ul li div:hover {
+  display: block;
+}
+
 .projects .H3 {
   display: flex;
   justify-content: center;
@@ -329,11 +345,37 @@ header {
 
 .about_us {
   width: 1200px;
-  height: 680px;
+  height: 730px;
   margin: auto;
   padding-top: 60px;
 }
-.about_us p:nth-child(2) {
+
+.sl-large-helmet::before {
+ font-size: 48px;
+ color: #f4bc16;
+ border: 1px solid #E2E6E7;
+ border-radius: 50%;
+ padding: 19px;
+ margin-right: 30px;
+}
+.sl-large-roller::before {
+  font-size: 48px;
+  color: #f4bc16;
+  border: 1px solid #E2E6E7;
+  border-radius: 50%;
+  padding: 19px;
+  margin-right: 30px;
+}
+.sl-large-driller::before {
+  font-size: 48px;
+  color: #f4bc16;
+  border: 1px solid #E2E6E7;
+  border-radius: 50%;
+  padding: 19px;
+  margin-right: 30px;
+}
+
+.about_us .p_1 {
   padding-right: 250px;
   padding-left: 250px;
   margin-bottom: 50px;
@@ -348,15 +390,173 @@ header {
 .about_us  ul {
   list-style: none;
 }
+.about_us ul li {
+  display: flex;
+  justify-content: center;
+  padding: 15px 0;
+  font-family: "Raleway";
+}
+.about_us ul li p{
+  font-size: 14px;
+  line-height: 24px;
+  padding: 0;
+ 
+}
+.about_us ul li h4 {
+  font-size: 18px;
+    line-height: 28px;
+}
 .about_us img {
   border-radius: 50%;
 }
 .img_h4 {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.our_benefits ul li p{
-  font-family: 'Stremline-small';
+
+
+.our_benefits {
+  margin-top: 65px;
+  padding-top: 65px;
+  padding-bottom: 66px;
+  height: 305px;
+  text-align: center;
+  background-color: #F5F5F5;
+
+}
+.our_benefits ul {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+
+  margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0;
+}
+.our_benefits ul li a {
+  text-decoration: none;
+  color: #444444;
+  font-family: 'Raleway';
+ 
+}
+.our_benefits ul li {
+  background-color: white;
+  width: 180px;
+  height: 137px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 15px;
 }
 
 
+.our_benefits .our_benefits_text  {
+  padding-top: 35px;
+}
+.our_benefits .our_benefits_text  h4{
+  font-family: "Raleway";
+  font-size: 18px;
+  line-height: 28px;
+  color: #000000;
+}
+
+.our_benefits .our_benefits_text p{
+  font-family: 'Raleway';
+    font-size: 14px;
+    line-height: 24px;
+    color: #444;
+    margin: 0 100px;
+    padding-top: 10px;
+}
+.largeur {
+  width: 1200px;
+}
+
+.sl-large-bubble-check::before {
+  font-size: 48px;
+  color: #f4bc16;
+  padding: 19px;
+}
+
+.sl-large-shield::before {
+  font-size: 48px;
+  color: #f4bc16;
+  padding: 19px;
+}
+
+.sl-large-truck::before {
+  font-size: 48px;
+  color: #f4bc16;
+  padding: 19px;
+}
+
+.renovate {
+  width: 1200px;
+  height: 540px;
+  margin: 65px auto 0;
+  padding-bottom: 66px;
+  
+}
+.renovate .p_1 {
+  padding-right: 250px;
+  padding-left: 250px;
+  margin-bottom: 50px;
+  margin-top: 50px;
+  text-align: center;
+  font-family: "Raleway";
+  font-size: 16px;
+  line-height: 26px;
+}
+.renovate ul {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+
+  list-style-type: disc;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0;
+}
+.renovate ul li {
+  text-align: center;
+  padding: 0 20px;
+  list-style: none;
+  width: 400px;
+  height: 340px;
+  font-family: Raleway;
+}
+.sl-large-house-1::before {
+  width: 60px;
+  height: 60px;
+  padding: 40px;
+  font-size: 48px;
+  margin: 0 115px;
+  color: #F4BC16;
+  border: 1px solid #E2E6E7;
+  border-radius: 50%;
+}
+.sl-large-eco::before{
+  width: 60px;
+  height: 60px;
+  padding: 40px;
+  font-size: 48px;
+  margin: 0 115px;
+  color: #F4BC16;
+  border: 1px solid #E2E6E7;
+  border-radius: 50%;
+}
+.sl-large-garage::before {
+  width: 60px;
+  height: 60px;
+  padding: 40px;
+  font-size: 48px;
+  margin: 0 115px;
+  color: #F4BC16;
+  border: 1px solid #E2E6E7;
+  border-radius: 50%;
+}
